--- a/src/app/profil-user/profil-user.component.css
+++ b/src/app/profil-user/profil-user.component.css
@@ -1,11 +1,14 @@
 .add-photo-card {
     display: flex;
    /* width: 100%;*/
-    height: 60%;
+    height: 110px;
     justify-content: space-around;
     flex-direction: column;
   }
-  
+
 /*  .add-photo-card > * {
     margin-top: 20px;
   }*/
+.form-group{
+  height:80%;
+}
