--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,5 +1,5 @@
 <ngx-ui-loader></ngx-ui-loader>
-
+<app-nav-bar-accueil></app-nav-bar-accueil>
 <body>
 
     <div class="wrap">
@@ -9,19 +9,19 @@
     </div>
 
     <!-- Navigation -->
-    <app-nav-bar-accueil></app-nav-bar-accueil>
+
 
     <!-- Page Content -->
     <div class="container">
 
       <!-- Jumbotron Header -->
-
+      <div class="styleJumbotron">
       <div class="jumbotron my-4">
         <h1 class="display-3">{{'accueil_h1' | translate}}</h1>
         <p class="lead">Donner du sens à votre épargne. Aider quelqu'un a réaliser son rêve.</p>
         <a *ngIf="infoUser"  class="btn btn-primary btn-lg" [routerLink]="['/Identification']" routerLinkActive="active">Je m'inscris</a>
       </div>
-
+      </div>
       <!-- Page Features -->
       <div class="jumbotron my-4">
 
