--- a/src/app/lend-me-en-bref/lend-me-en-bref.component.html
+++ b/src/app/lend-me-en-bref/lend-me-en-bref.component.html
@@ -4,7 +4,7 @@
 
 <mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar></div>
     <mat-card-title>Rambla M.</mat-card-title>
     <mat-card-subtitle>Developpeur FullStack</mat-card-subtitle>
   </mat-card-header>
@@ -18,7 +18,7 @@
 
 <mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar ></div>
     <mat-card-title>J. Domingo</mat-card-title>
     <mat-card-subtitle>Developpeur FullStack</mat-card-subtitle>
   </mat-card-header>
@@ -30,7 +30,7 @@
   </mat-card-content>
 </mat-card><mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar ></div>
     <mat-card-title>L. Renard</mat-card-title>
     <mat-card-subtitle>Developpeur FullStack</mat-card-subtitle>
   </mat-card-header>
@@ -42,7 +42,7 @@
   </mat-card-content>
 </mat-card><mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar></div>
     <mat-card-title>F. René-Corail</mat-card-title>
     <mat-card-subtitle>Developpeur FullStack</mat-card-subtitle>
   </mat-card-header>
