--- a/src/app/my-project-list-company-owner/my-project-list-company-owner.component.html
+++ b/src/app/my-project-list-company-owner/my-project-list-company-owner.component.html
@@ -79,7 +79,7 @@
                       class="card-img-top"
                       [src]="project.afficheProject"
                       alt=""
-                      style="width: 300px; height: 200px; margin-left: 20%"
+                      style="width: 300px; height: 200px; margin-left:10px"
                     />
                     <div class="card-body">
                       <h4 class="card-title">{{ project.nom }}</h4>
